Fixed #13 issue: Fab menu has too much click area when closed

--- a/paper-fab-menu.css
+++ b/paper-fab-menu.css
@@ -9,26 +9,28 @@
  */
 
 :host {
+  /*position: absolute !important;*/
+  position: absolute;
+  bottom: 0;
+  right: 0;
   padding: 0.5em;
+  padding-top: 0;
+
   z-index: 12;
 }
 
 .container {
-  position: absolute !important;
-  bottom: 0;
-  right: 0;
-  padding: 1em;
   /* layer hack */
   transform: translateZ(0);
-  overflow: hidden;
+  overflow: visible;
 }
 
 .container.show {
-    z-index: 10000;
+  z-index: 10000;
 }
 
 .container.show {
-    z-index: {{zIndex}};
+  z-index: {{zIndex}};
 }
 
 #trigger {
@@ -68,4 +70,19 @@ polyfill-next-selector { content: 'paper-fab-menu #fam paper-fab-menu-item, #fam
 paper-fab-menu #fam paper-fab-menu-item, #fam content[select="paper-fab-menu-item"]::content * {
   will-change: opacity, transform;
   transition: opacity 0.2s, transform 0.2s, -moz-transform 0.2s, -webkit-transform 0.2s;
+}
+
+.container .item-container {
+    transition-property: transform, -moz-transform, -webkit-transform;
+    transform: scale3d(0, 0, 0);
+    -moz-transform: scale3d(0, 0, 0);
+    -webkit-transform: scale3d(0, 0, 0);
+}
+
+.container.show .item-container {
+    transition-delay: 0s;
+    transition-property: transform, -moz-transform, -webkit-transform;
+    transform: scale3d(1, 1, 1);
+    -moz-transform: scale3d(1, 1, 1);
+    -webkit-transform: scale3d(1, 1, 1);
 }
